--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-plugin-vuex": "^5.0.8",
     "core-js": "^3.25.3",
-    "eslint": "^8.24.0",
-    "eslint-config-vue-standard": "^0.0.6",
-    "eslint-plugin-vue": "^9.5.1",
     "vue": "^2.7.10",
     "vue-router": "^3.6.5"
   },
@@ -29,7 +26,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "eslint": "^8.24.0",
+    "eslint-config-vue-standard": "^0.0.6",
+    "eslint-plugin-vue": "^9.5.1"
   },
   "eslintConfig": {
     "root": true,
