updating npm install command

--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -43,7 +43,7 @@ jobs:
           submodules: true
       - name: npm install, build
         run: |
-          npm install
+          npm install --legacy-peer-deps
           npm run build
       - name: Build And Deploy
         id: builddeploy
